--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <body>
     <!-- basic layout of calci -->
-    <div class="container-fluid  p-5">
+    <div class="container-fluid  p-5 ">
         <h1 class="p-3 my-3 text-center"  data-aos="zoom-in-down" >simple<span class="text-danger">calculator</span></h1>
-        <div class="inputvalues card p-3 shadow p-5 bg-info-subtle mb-5  rounded" data-aos="fade-down-right"
+        <div class="inputvalues card p-3 shadow p-5 bg-danger-subtle mb-5  rounded" data-aos="flip-left"
         data-aos-easing="ease-out-cubic"
         data-aos-duration="2000">
             <div class="row g=0 my-3 p-3">
